# minclang-haskell

./: .gitignore  CLAUDE.md  minclang-haskell.cabal  simplang-haskell.cabal
